welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:53: error: value Green is not a member of object java.awt.Color
  faireCarreCouleur1(Color.Green)
                           ^